--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "uuid": "^3.3.2"
